--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "start": "yarn react-native start"
     },
     "dependencies": {
+        "@react-native/metro-config": "^0.74.81",
+        "react": "^18.3.0",
         "react-native": "^0.74.0"
     }
 }
